--- a/app/components/HomeHeader/style.less
+++ b/app/components/HomeHeader/style.less
@@ -5,13 +5,16 @@
     * {
         color: #fff;
         font-size: 16px;
-        line-height: 1;
+        //line-height: 1;
     }
 }
 .home-header-left {
     width: 60px;
     text-align: left;
     margin: 5px 0;
+    a{
+        text-decoration: none;
+    }
 }
 .home-header-middle {
     width: auto;
@@ -27,6 +30,7 @@
             color: #ccc !important;
         }
         input {
+            color: #333 !important;
             font-size: 14px !important;
             font-weight: normal;
         }
